--- a/src/styles/Topics.css
+++ b/src/styles/Topics.css
@@ -1,37 +1,35 @@
-/* Topics.css */
+/* src/TopicsPage.css */
 
-.topics-container {
-  display: flex;
-  gap: 20px; /* space between the cards */
-  justify-content: space-between;
+.topics-page {
+  background-color: #121212;
+  color: #e0e0e0;
+  min-height: 100vh;
   padding: 20px;
 }
 
 .card {
-  background-color: darkgray;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  width: 30%; /* ensures cards are side-by-side */
-  text-align: center;
+  background-color: #1e1e1e;
 }
 
-.card h3 {
-  margin-bottom: 10px;
+.card-title {
+  color: #f0f0f0;
 }
 
-.card p {
-  color: #6c757d;
+.card-text {
+  color: #b0b0b0;
 }
 
-.modal-container {
-  max-width: 75%;
+.btn-primary {
+  background-color: #007bff;
+  border-color: #007bff;
 }
 
-.modal-dialog {
-  max-width: 75%;
+.btn-primary:hover {
+  background-color: #0056b3;
+  border-color: #004085;
 }
 
-.modal-body {
-  overflow-x: auto;
+.modal-body img {
+  max-width: 100%;
+  height: auto;
 }
