--- a/src/styles/Events.css
+++ b/src/styles/Events.css
@@ -1,17 +1,30 @@
-/* Events.css */
+/* src/styles/Events.css */
 
 .events-container {
-  display: flex;
-  gap: 40px; /* Space between calendar and events list */
   padding: 20px;
+  background-color: #121212;
+  color: #e0e0e0;
+}
+
+.header-section {
+  margin-bottom: 40px;
+}
+
+.header-section h1 {
+  color: #f0f0f0;
+}
+
+.header-section p {
+  color: #b0b0b0;
 }
 
 .calendar-section {
-  width: 60%;
+  background-color: #1e1e1e;
+  padding: 20px;
+  border-radius: 8px;
 }
 
 .calendar-header {
-  text-align: center;
   margin-bottom: 10px;
 }
 
@@ -24,32 +37,42 @@
 .day {
   font-weight: bold;
   text-align: center;
+  color: #f0f0f0;
 }
 
 .date {
-  background-color: darkgray;
+  background-color: #333;
   border-radius: 4px;
   padding: 10px;
   text-align: center;
+  color: #b0b0b0;
+}
+
+.event-day {
+  background-color: #00bcd4;
+  color: #121212; /* Dark text for contrast */
+}
+
+.events-section {
+  background-color: #1e1e1e;
+  padding: 20px;
+  border-radius: 8px;
 }
 
 .events-list {
-  width: 40%;
-}
-
-.events-list h3 {
-  margin-bottom: 10px;
-}
-
-.events-list ul {
   list-style-type: none;
   padding: 0;
 }
 
 .events-list li {
-  background-color: darkgray;
+  background-color: #333;
   border-radius: 4px;
   padding: 10px;
   margin-bottom: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  color: #e0e0e0;
+}
+
+.card-body {
+  padding: 20px;
 }
