--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,62 +1,77 @@
-/* About.css */
+/* src/styles/About.css */
 
 .about-container {
-  padding: 20px;
-  line-height: 1.6;
+  padding: 40px;
+  background: linear-gradient(135deg, #1e1e1e, #121212); /* Dark gradient background */
+  color: #e0e0e0; /* Light text color */
 }
 
 .statement-of-purpose {
-  margin-bottom: 40px;
+  margin-bottom: 60px;
 }
 
 .statement-of-purpose h2 {
-  font-size: 2em;
-  margin-bottom: 10px;
+  font-size: 2.5em;
+  margin-bottom: 20px;
+  color: #00bcd4; /* Accent color */
+  font-weight: 700; /* Bold for emphasis */
 }
 
 .statement-of-purpose p {
-  font-size: 1.1em;
-  color: #333;
+  font-size: 1.15em;
+  color: #b0b0b0; /* Slightly lighter text color */
+  max-width: 800px;
+  margin: 0 auto; /* Centered text */
 }
 
 .our-team-section {
-  margin-top: 40px;
+  margin-top: 60px;
 }
 
 .our-team-section h2 {
-  font-size: 2em;
-  text-align: center;
-  margin-bottom: 20px;
+  font-size: 2.5em;
+  margin-bottom: 40px;
+  color: #00bcd4; /* Accent color */
+  font-weight: 700; /* Bold for emphasis */
 }
 
 .our-team {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
-  justify-content: space-around;
-  padding: 20px;
+  justify-content: center;
+}
+
+.team-card-wrapper {
+  margin-bottom: 20px;
 }
 
 .team-card {
-  background-color: darkgray;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 12px;
+  overflow: hidden;
   padding: 20px;
   text-align: center;
-  width: 200px;
+  background: #1e1e1e;
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.team-card:hover {
+  transform: translateY(-10px); /* Lift effect */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Enhanced shadow */
 }
 
 .team-img {
-  border-radius: 50%;
-  width: 100px;
-  height: 100px;
+  border-radius: 25%;
+  width: 120px;
+  height: 200px;
   object-fit: cover;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .team-name {
-  font-size: 1.2em;
+  font-size: 1.3em;
   margin: 10px 0;
+  font-weight: 600;
 }
 
 .team-position {
