Latest changes: - From template state, NDKC-PSITS data (pics, logo, etc.) is finally implemented - added captions to all pages except the Home page - made titles consistent across pages - refined card layout of Topic and About page - Styled modal in About page - added Google Maps to Contact page

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -6,6 +6,11 @@
   color: #e0e0e0; /* Light text color */
 }
 
+.subtitle {
+  font-size: 1.25rem;
+  color: #b0b0b0; /* Light gray for subtitle text */
+}
+
 .statement-of-purpose {
   margin-bottom: 60px;
 }
